[DT-1607] Update users so that library cards and institutions match expected values. (#2541)